--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div class="sidebar-info">
           <figure class="avatar-box">
             <img
-              src="./assets/images/my-avatar.png"
+              src="./assets/images/1611956856088.jfif"
               alt="David McNeill"
               width="80"
             />
@@ -1138,7 +1138,7 @@
           <section class="mapbox" data-mapbox>
             <figure>
               <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d199666.5651251294!2d-121.58334177520186!3d38.56165006739519!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x809ac672b28397f9%3A0x921f6aaa74197fdb!2sSacramento%2C%20CA%2C%20USA!5e0!3m2!1sen!2sbd!4v1647608789441!5m2!1sen!2sbd"
+                src="https://www.google.com/maps/place/8286+Tangle+Pond+Ln,+Mechanicsville,+VA+23111/@37.6160119,-77.3922507,17z/data=!4m5!3m4!1s0x89b11792a115c027:0x8377a4a9b5bc87a7!8m2!3d37.6160119!4d-77.390062"
                 width="400"
                 height="300"
                 loading="lazy"
