--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div class="sidebar-info">
           <figure class="avatar-box">
             <img
-              src="./assets/images/1611956856088.jfif"
+              src="./assets/images/IMG_20220915_104131.jpg"
               alt="David McNeill"
               width="80"
             />
@@ -938,7 +938,7 @@
           <section class="mapbox" data-mapbox>
             <figure>
               <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3160.41130201535!2d-77.39225068475335!3d37.61601187978865!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89b11792a115c027%3A0x8377a4a9b5bc87a7!2s8286%20Tangle%20Pond%20Ln%2C%20Mechanicsville%2C%20VA%2023111!5e0!3m2!1sen!2sus!4v1663337832567!5m2!1sen!2sus"
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d101116.41400953861!2d-77.42741248946786!3d37.628323699955544!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89b1180ccf023ea3%3A0xfc67a0544c0f3825!2sMechanicsville%2C%20VA!5e0!3m2!1sen!2sus!4v1663338148702!5m2!1sen!2sus"
                 width="600"
                 height="450"
                 style="border: 0"
