--- a/index.html
+++ b/index.html
@@ -532,26 +532,6 @@
                 <ion-icon name="book-outline"></ion-icon>
               </div>
 
-              <h3 class="h3">Education</h3>
-            </div>
-
-            <ol class="timeline-list">
-              <li class="timeline-item">
-                <h4 class="h4 timeline-item-title">Atlee High School</h4>
-
-                <span>2001-2005</span>
-
-                <p class="timeline-text">Graduated a long time ago...</p>
-              </li>
-            </ol>
-          </section>
-
-          <section class="timeline">
-            <div class="title-wrapper">
-              <div class="icon-box">
-                <ion-icon name="book-outline"></ion-icon>
-              </div>
-
               <h3 class="h3">Experience</h3>
             </div>
 
@@ -563,7 +543,7 @@
 
                 <p class="timeline-text">
                   - Performed Unit testing with Moq library on API controllers.
-                  - Implemented a repository pattern to enable better testing of
+                  Implemented a repository pattern to enable better testing of
                   the controllers.
                 </p>
               </li>
@@ -577,7 +557,7 @@
 
                 <p class="timeline-text">
                   - Worked on various projects involving Chrome Extension,
-                  Vue.js, Golang, Angular. - Built out entire V3 Chrome
+                  Vue.js, Golang, Angular. Built out entire V3 Chrome
                   Extensions, with fluid script injections, and powerful access
                   to the browser.
                 </p>
@@ -646,54 +626,6 @@
           </header>
 
           <section class="projects">
-            <ul class="filter-list">
-              <li class="filter-item">
-                <button class="active" data-filter-btn>All</button>
-              </li>
-
-              <li class="filter-item">
-                <button data-filter-btn>Web design</button>
-              </li>
-
-              <li class="filter-item">
-                <button data-filter-btn>Applications</button>
-              </li>
-
-              <li class="filter-item">
-                <button data-filter-btn>Web development</button>
-              </li>
-            </ul>
-
-            <div class="filter-select-box">
-              <button class="filter-select" data-select>
-                <div class="select-value" data-selecct-value>
-                  Select category
-                </div>
-
-                <div class="select-icon">
-                  <ion-icon name="chevron-down"></ion-icon>
-                </div>
-              </button>
-
-              <ul class="select-list">
-                <li class="select-item">
-                  <button data-select-item>All</button>
-                </li>
-
-                <li class="select-item">
-                  <button data-select-item>Web design</button>
-                </li>
-
-                <li class="select-item">
-                  <button data-select-item>Applications</button>
-                </li>
-
-                <li class="select-item">
-                  <button data-select-item>Web development</button>
-                </li>
-              </ul>
-            </div>
-
             <ul class="project-list">
               <li
                 class="project-item active"
