adding to portfolio

--- a/index.html
+++ b/index.html
@@ -687,7 +687,7 @@
                   </div>
 
                   <img
-                    src="./assets/images/camel-scrape.png"
+                    src="./assets/images/camel-ss.png"
                     alt="finance"
                     loading="lazy"
                   />
@@ -711,13 +711,13 @@
                     </div>
 
                     <img
-                      src="./assets/images/project-2.png"
+                      src="./assets/images/Animatior-link.png"
                       alt="orizon"
                       loading="lazy"
                     />
                   </figure>
 
-                  <h3 class="project-title">Orizon</h3>
+                  <h3 class="project-title">2D Unity Games</h3>
 
                   <p class="project-category">Web development</p>
                 </a>
@@ -735,15 +735,15 @@
                     </div>
 
                     <img
-                      src="./assets/images/project-3.jpg"
+                      src="./assets/images/prop12.jpg"
                       alt="fundo"
                       loading="lazy"
                     />
                   </figure>
 
-                  <h3 class="project-title">Fundo</h3>
+                  <h3 class="project-title">APPO Retreats</h3>
 
-                  <p class="project-category">Web design</p>
+                  <p class="project-category">Web development</p>
                 </a>
               </li>
 
@@ -759,15 +759,15 @@
                     </div>
 
                     <img
-                      src="./assets/images/project-4.png"
+                      src="./assets/images/receipt.png"
                       alt="brawlhalla"
                       loading="lazy"
                     />
                   </figure>
 
-                  <h3 class="project-title">Brawlhalla</h3>
+                  <h3 class="project-title">Receiptify</h3>
 
-                  <p class="project-category">Applications</p>
+                  <p class="project-category">Web development</p>
                 </a>
               </li>
 
