--- a/index.html
+++ b/index.html
@@ -173,18 +173,19 @@
 
           <section class="about-text">
             <p>
-              I'm Creative Director and UI/UX Designer from Sydney, Australia,
-              working in web development and print media. I enjoy turning
-              complex problems into simple, beautiful and intuitive designs.
+              I've had about 2 years of perfesional experience. I currently do
+              contract work with Bleached Solutions. Worked with Angular,
+              Vue.js, Javascript, Chrome Extension, C#, and golang while there.
+              Before that I was an intern at Revenue IQ, where i mostly did
+              microservice refactoring, and wrote unit tests. They used an
+              Angular frontend and C# on the back.
             </p>
 
             <p>
-              My job is to build your website so that it is functional and
-              user-friendly but at the same time attractive. Moreover, I add
-              personal touch to your product and make sure that is eye-catching
-              and easy to use. My aim is to bring across your message and
-              identity in the most creative way. I created web design for many
-              famous brand companies.
+              My goal is to learn as much as possible about software creation. I
+              have enjoyed the past 3 years learing various technologies, and
+              how web design works. I also enjoy working on 2D games with Unity
+              in my spare time.
             </p>
           </section>
 
@@ -210,8 +211,9 @@
                   <h4 class="h4 service-item-title">Web design</h4>
 
                   <p class="service-item-text">
-                    The most modern and high-quality design made at a
-                    professional level.
+                    Have strived to create responsive Applications, that are
+                    easy on the eyes. Created pleasent looking stlyes and
+                    layouts.
                   </p>
                 </div>
               </li>
@@ -226,10 +228,12 @@
                 </div>
 
                 <div class="service-content-box">
-                  <h4 class="h4 service-item-title">Web development</h4>
+                  <h4 class="h4 service-item-title">Chrome Extension V3</h4>
 
                   <p class="service-item-text">
-                    High-quality development of sites at the professional level.
+                    Have spent a lot of time in this area, Understand most of
+                    the chrome libraries to build out powerful browser
+                    injection.
                   </p>
                 </div>
               </li>
@@ -244,11 +248,11 @@
                 </div>
 
                 <div class="service-content-box">
-                  <h4 class="h4 service-item-title">Mobile apps</h4>
+                  <h4 class="h4 service-item-title">Data Management</h4>
 
                   <p class="service-item-text">
-                    Professional development of applications for iOS and
-                    Android.
+                    Worked with Entity Framework, Postgres, and SQL. Worked with
+                    pg in go to build out repos.
                   </p>
                 </div>
               </li>
@@ -263,11 +267,11 @@
                 </div>
 
                 <div class="service-content-box">
-                  <h4 class="h4 service-item-title">Photography</h4>
+                  <h4 class="h4 service-item-title">Unity</h4>
 
                   <p class="service-item-text">
-                    I make high-quality photos of any category at a professional
-                    level.
+                    Worked on making a few games using the animator, and state
+                    machine is fun. This is more for spare time.
                   </p>
                 </div>
               </li>
@@ -680,23 +684,23 @@
                 data-filter-item
                 data-category="web development"
               >
-              <a href="#">
-                <figure class="project-img">
-                  <div class="project-item-icon-box">
-                    <ion-icon name="eye-outline"></ion-icon>
-                  </div>
+                <a href="#">
+                  <figure class="project-img">
+                    <div class="project-item-icon-box">
+                      <ion-icon name="eye-outline"></ion-icon>
+                    </div>
 
-                  <img
-                    src="./assets/images/camel-ss.png"
-                    alt="finance"
-                    loading="lazy"
-                  />
-                </figure>
+                    <img
+                      src="./assets/images/camel-ss.png"
+                      alt="finance"
+                      loading="lazy"
+                    />
+                  </figure>
 
-                <h3 class="project-title">Live Music Archiver</h3>
+                  <h3 class="project-title">Live Music Archiver</h3>
 
-                <p class="project-category">Web development</p>
-              </a>
+                  <p class="project-category">Web development</p>
+                </a>
               </li>
 
               <li
