--- a/index.html
+++ b/index.html
@@ -173,9 +173,9 @@
 
           <section class="about-text">
             <p>
-              I've had about 2 years of perfesional experience. I currently do
+              I've had about 2 years of profesional experience. I currently do
               contract work with Bleached Solutions. Worked with Angular,
-              Vue.js, Javascript, Chrome Extension, C#, and golang while there.
+              Vue.js, Javascript, Chrome Extension, C#, and Golang while there.
               Before that I was an intern at Revenue IQ, where i mostly did
               microservice refactoring, and wrote unit tests. They used an
               Angular frontend and C# on the back.
@@ -183,7 +183,7 @@
 
             <p>
               My goal is to learn as much as possible about software creation. I
-              have enjoyed the past 3 years learing various technologies, and
+              have enjoyed the past 3 years learning various technologies, and
               how web design works. I also enjoy working on 2D games with Unity
               in my spare time.
             </p>
@@ -212,7 +212,7 @@
 
                   <p class="service-item-text">
                     Have strived to create responsive Applications, that are
-                    easy on the eyes. Created pleasent looking stlyes and
+                    easy on the eyes. Created pleasent looking styles and
                     layouts.
                   </p>
                 </div>
@@ -252,7 +252,7 @@
 
                   <p class="service-item-text">
                     Worked with Entity Framework, Postgres, and SQL. Worked with
-                    pg in go to build out repos.
+                    go package pg to build out repos.
                   </p>
                 </div>
               </li>
@@ -271,7 +271,7 @@
 
                   <p class="service-item-text">
                     Worked on making a few games using the animator, and state
-                    machine is fun. This is more for spare time.
+                    machine. This is more for spare time.
                   </p>
                 </div>
               </li>
