--- a/index.html
+++ b/index.html
@@ -784,15 +784,14 @@
                     </div>
 
                     <img
-                      src="./assets/images/project-5.png"
-                      alt="dsm."
+                      src="./assets/images/ammo.png"
                       loading="lazy"
                     />
                   </figure>
 
-                  <h3 class="project-title">DSM.</h3>
+                  <h3 class="project-title">Manos Ammo</h3>
 
-                  <p class="project-category">Web design</p>
+                  <p class="project-category">Web development</p>
                 </a>
               </li>
 
