--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
           <!--
           - clients
         -->
-
+<!-- 
           <section class="clients">
             <h3 class="h3 clients-title">Clients</h3>
 
@@ -422,7 +422,7 @@
                 </a>
               </li>
             </ul>
-          </section>
+          </section> -->
         </article>
 
         <!--
@@ -555,7 +555,7 @@
 
                   <h3 class="project-title">Live Music Archiver</h3>
 
-                  <p class="project-category">Web development</p>
+                  <p class="project-category">Chrome Extension based scraper</p>
                 </a>
               </li>
 
@@ -577,9 +577,9 @@
                     />
                   </figure>
 
-                  <h3 class="project-title">2D Unity Games</h3>
+                  <h3 class="project-title">Unity</h3>
 
-                  <p class="project-category">Web development</p>
+                  <p class="project-category">2D games</p>
                 </a>
               </li>
 
@@ -603,7 +603,7 @@
 
                   <h3 class="project-title">APPO Retreats</h3>
 
-                  <p class="project-category">Web development</p>
+                  <p class="project-category">Trip planning</p>
                 </a>
               </li>
 
@@ -627,7 +627,7 @@
 
                   <h3 class="project-title">Receiptify</h3>
 
-                  <p class="project-category">Web development</p>
+                  <p class="project-category">Reads images</p>
                 </a>
               </li>
 
@@ -651,7 +651,7 @@
 
                   <h3 class="project-title">Manos Ammo</h3>
 
-                  <p class="project-category">Web development</p>
+                  <p class="project-category">Store stock and info</p>
                 </a>
               </li>
             </ul>
