--- a/index.html
+++ b/index.html
@@ -138,10 +138,6 @@
     -->
 
       <div class="main-content">
-        <!--
-        - #NAVBAR
-      -->
-
         <nav class="navbar">
           <ul class="navbar-list">
             <li class="navbar-item">
@@ -157,7 +153,7 @@
             </li>
 
             <li class="navbar-item">
-              <button class="navbar-link" data-nav-link>Contact</button>
+              <button class="navbar-link" data-nav-link>Location</button>
             </li>
           </ul>
         </nav>
@@ -173,19 +169,24 @@
 
           <section class="about-text">
             <p>
-              I've had about 2 years of profesional experience. I currently do
-              contract work with Bleached Solutions. Worked with Angular,
-              Vue.js, Javascript, Chrome Extension, C#, and Golang while there.
-              Before that I was an intern at Revenue IQ, where i mostly did
-              microservice refactoring, and wrote unit tests. They used an
-              Angular frontend and C# on the back.
+              I've had about 2 years of professional experience as a full stack
+              developer. I currently do contract work with Bleached Solutions.
+              While there, I have worked with Angular, Vue.js, Javascript,
+              Chrome Extension, C#, and Golang. Before that I was an intern at
+              Revenue IQ, where i mostly did microservice refactoring, and wrote
+              unit tests. They used an Angular frontend and C# on the back. I am
+              currently seeking a junior level positon, preferably as
+              full-stack, in C#/Angular/JS/Vue.js. Although, I am not afraid of
+              other technologies I have less experience with.
             </p>
 
             <p>
-              My goal is to learn as much as possible about software creation. I
-              have enjoyed the past 3 years learning various technologies, and
-              how web design works. I also enjoy working on 2D games with Unity
-              in my spare time.
+              My goal is to learn as much as possible about software creation,
+              and gain a great understanding of full-stack engineering. I have
+              enjoyed the past 3 years learning various technologies. It is
+              important learning technologies I dont understand, and improving
+              my skills with ones I do. I also enjoy working on 2D games with
+              Unity in my spare time.
             </p>
           </section>
 
@@ -363,7 +364,7 @@
           <!--
           - clients
         -->
-<!-- 
+          <!-- 
           <section class="clients">
             <h3 class="h3 clients-title">Clients</h3>
 
@@ -662,9 +663,9 @@
         - #CONTACT
       -->
 
-        <article class="contact" data-page="contact">
+        <article class="contact" data-page="location">
           <header>
-            <h2 class="h2 article-title">Contact</h2>
+            <h2 class="h2 article-title">Location</h2>
           </header>
 
           <section class="mapbox" data-mapbox>
@@ -679,45 +680,6 @@
                 referrerpolicy="no-referrer-when-downgrade"
               ></iframe>
             </figure>
-          </section>
-
-          <section class="contact-form">
-            <h3 class="h3 form-title">Contact Form</h3>
-
-            <form action="#" class="form" data-form>
-              <div class="input-wrapper">
-                <input
-                  type="text"
-                  name="fullname"
-                  class="form-input"
-                  placeholder="Full name"
-                  required
-                  data-form-input
-                />
-
-                <input
-                  type="email"
-                  name="email"
-                  class="form-input"
-                  placeholder="Email address"
-                  required
-                  data-form-input
-                />
-              </div>
-
-              <textarea
-                name="message"
-                class="form-input"
-                placeholder="Your Message"
-                required
-                data-form-input
-              ></textarea>
-
-              <button class="form-btn" type="submit" disabled data-form-btn>
-                <ion-icon name="paper-plane"></ion-icon>
-                <span>Send Message</span>
-              </button>
-            </form>
           </section>
         </article>
       </div>
