--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
 
               <li class="timeline-item">
                 <h4 class="h4 timeline-item-title">
-                  Intern at Bleach Solutions && Contract Work
+                  Intern at Bleached Solutions && Contract Work
                 </h4>
 
                 <span></span>
@@ -646,6 +646,29 @@
                   <h3 class="project-title">Manos Ammo</h3>
 
                   <p class="project-category">Store stock and info</p>
+                </a>
+              </li>
+              <li
+                class="project-item active"
+                data-filter-item
+                data-category="web design"
+              >
+                <a href="#">
+                  <figure class="project-img">
+                    <div class="project-item-icon-box">
+                      <ion-icon name="eye-outline"></ion-icon>
+                    </div>
+
+                    <img
+                      src="./assets/images/bleachss.png"
+                      alt="manos"
+                      loading="lazy"
+                    />
+                  </figure>
+
+                  <h3 class="project-title">Bleached Solultions</h3>
+
+                  <p class="project-category">Main site - Under construction</p>
                 </a>
               </li>
             </ul>
