--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@
                   Intern at Bleached Solutions && Contract Work
                 </h4>
 
-                <span></span>
+                <span>current</span>
 
                 <p class="timeline-text">
                   - Worked on various projects involving Chrome Extension,
@@ -463,6 +463,15 @@
                   Extensions, with fluid script injections, and powerful access
                   to the browser.
                 </p>
+              </li>
+              <li class="timeline-item">
+                <h4 class="h4 timeline-item-title">Full Resume Link</h4>
+
+                <a
+                  class="resume"
+                  href="assets/images/David Resume 9-16.pdf"
+                  >Click Here To See Full Resume</a
+                >
               </li>
             </ol>
           </section>
