--- a/index.html
+++ b/index.html
@@ -173,11 +173,11 @@
               developer. I currently do contract work with Bleached Solutions.
               While there, I have worked with Angular, Vue.js, Javascript,
               Chrome Extension, C#, and Golang. Before that I was an intern at
-              Revenue IQ, where i mostly did microservice refactoring, and wrote
-              unit tests. They used an Angular frontend and C# on the back. I am
-              currently seeking a junior level positon, preferably as
-              full-stack, in C#/Angular/JS/Vue.js. Although, I am not afraid of
-              other technologies I have less experience with.
+              Revenue IQ doing microservice refactoring, and writing unit tests.
+              They used an Angular frontend and a C# backend. I am currently
+              seeking a junior level positon, preferably as full-stack, in
+              C#/Angular/JS/Vue.js. Although, I am not afraid of other
+              technologies I have less experience with.
             </p>
 
             <p>
@@ -213,7 +213,7 @@
 
                   <p class="service-item-text">
                     Have strived to create responsive Applications, that are
-                    easy on the eyes. Created pleasent looking styles and
+                    easy on the eyes. Creation of pleasant looking styles and
                     layouts.
                   </p>
                 </div>
@@ -232,8 +232,8 @@
                   <h4 class="h4 service-item-title">Chrome Extension V3</h4>
 
                   <p class="service-item-text">
-                    Have spent a lot of time in this area, Understand most of
-                    the chrome libraries to build out powerful browser
+                    Have spent a lot of time in this area. Understanding of most
+                    of the chrome libraries, to build out powerful browser
                     injection.
                   </p>
                 </div>
@@ -459,7 +459,7 @@
 
                 <p class="timeline-text">
                   - Worked on various projects involving Chrome Extension,
-                  Vue.js, Golang, Angular. Built out entire V3 Chrome
+                  Vue.js, Golang, and Angular. Built out entire V3 Chrome
                   Extensions, with fluid script injections, and powerful access
                   to the browser.
                 </p>
@@ -467,9 +467,7 @@
               <li class="timeline-item">
                 <h4 class="h4 timeline-item-title">Full Resume Link</h4>
 
-                <a
-                  class="resume"
-                  href="assets/images/David Resume 9-16.pdf"
+                <a class="resume" href="assets/images/David Resume 9-16.pdf"
                   >Click Here To See Full Resume</a
                 >
               </li>
