--- a/index.html
+++ b/index.html
@@ -475,13 +475,13 @@
           </section>
 
           <section class="skill">
-            <h3 class="h3 skills-title">My skills</h3>
+            <h3 class="h3 skills-title">Language Aptitude</h3>
 
             <ul class="skills-list content-card">
               <li class="skills-item">
                 <div class="title-wrapper">
-                  <h5 class="h5">Web design</h5>
-                  <data value="80">65%</data>
+                  <h5 class="h5">C#</h5>
+                  <data value="80">75%</data>
                 </div>
 
                 <div class="skill-progress-bg">
@@ -492,7 +492,7 @@
               <li class="skills-item">
                 <div class="title-wrapper">
                   <h5 class="h5">Graphic design</h5>
-                  <data value="70">60%</data>
+                  <data value="70">70%</data>
                 </div>
 
                 <div class="skill-progress-bg">
@@ -502,8 +502,30 @@
 
               <li class="skills-item">
                 <div class="title-wrapper">
-                  <h5 class="h5">Branding</h5>
-                  <data value="90">80%</data>
+                  <h5 class="h5">Angular</h5>
+                  <data value="70">70%</data>
+                </div>
+
+                <div class="skill-progress-bg">
+                  <div class="skill-progress-fill" style="width: 70%"></div>
+                </div>
+              </li>
+
+              <li class="skills-item">
+                <div class="title-wrapper">
+                  <h5 class="h5">JS</h5>
+                  <data value="85">85%</data>
+                </div>
+
+                <div class="skill-progress-bg">
+                  <div class="skill-progress-fill" style="width: 85%"></div>
+                </div>
+              </li>
+
+              <li class="skills-item">
+                <div class="title-wrapper">
+                  <h5 class="h5">HTML</h5>
+                  <data value="90">90%</data>
                 </div>
 
                 <div class="skill-progress-bg">
@@ -513,8 +535,52 @@
 
               <li class="skills-item">
                 <div class="title-wrapper">
-                  <h5 class="h5">WordPress</h5>
-                  <data value="50">20%</data>
+                  <h5 class="h5">CSS</h5>
+                  <data value="80">80%</data>
+                </div>
+
+                <div class="skill-progress-bg">
+                  <div class="skill-progress-fill" style="width: 80%"></div>
+                </div>
+              </li>
+
+              <li class="skills-item">
+                <div class="title-wrapper">
+                  <h5 class="h5">Vue.js</h5>
+                  <data value="60">60%</data>
+                </div>
+
+                <div class="skill-progress-bg">
+                  <div class="skill-progress-fill" style="width: 60%"></div>
+                </div>
+              </li>
+
+              <li class="skills-item">
+                <div class="title-wrapper">
+                  <h5 class="h5">Golang</h5>
+                  <data value="50">50%</data>
+                </div>
+
+                <div class="skill-progress-bg">
+                  <div class="skill-progress-fill" style="width: 50%"></div>
+                </div>
+              </li>
+
+              <li class="skills-item">
+                <div class="title-wrapper">
+                  <h5 class="h5">Chrome Ext.</h5>
+                  <data value="85">85%</data>
+                </div>
+
+                <div class="skill-progress-bg">
+                  <div class="skill-progress-fill" style="width: 85%"></div>
+                </div>
+              </li>
+
+              <li class="skills-item">
+                <div class="title-wrapper">
+                  <h5 class="h5">SQL</h5>
+                  <data value="50">50%</data>
                 </div>
 
                 <div class="skill-progress-bg">
