--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <title>vCard - Personal Portfolio</title>
 
     <!--
-    - favicon
+     Icon by IYIKON on freeicons.io
   -->
     <link
       rel="shortcut icon"
-      href="./assets/images/logo.ico"
+      href="./assets/images/shortcut-icon.svg"
       type="image/x-icon"
     />
 
