modal for portfolio zoom

--- a/index.html
+++ b/index.html
@@ -332,8 +332,8 @@
               <div class="modal-img-wrapper">
                 <figure class="modal-avatar-box">
                   <img
-                    src="./assets/images/avatar-1.png"
-                    alt="Daniel lewis"
+                    src="./assets/images/ben5.png"
+                    alt="Ben Leach"
                     width="80"
                     data-modal-img
                   />
@@ -594,7 +594,17 @@
         <!--
         - #PORTFOLIO
       -->
-
+        <div id="myModal" class="portfolio-modal">
+          <div class="portfolio-modal-content">
+            <button
+              class="portfolio-modal-close-btn"
+              id="portfolio-modal-close"
+            >
+              <ion-icon name="close-outline"></ion-icon>
+            </button>
+            <img src="" id="portfolio-modal-image" />
+          </div>
+        </div>
         <article class="portfolio" data-page="portfolio">
           <header>
             <h2 class="h2 article-title">Portfolio</h2>
@@ -608,7 +618,7 @@
                 data-category="web development"
               >
                 <a href="#">
-                  <figure class="project-img">
+                  <figure class="project-img" id="img1">
                     <div class="project-item-icon-box">
                       <ion-icon name="eye-outline"></ion-icon>
                     </div>
@@ -632,7 +642,7 @@
                 data-category="web development"
               >
                 <a href="#">
-                  <figure class="project-img">
+                  <figure class="project-img" id="img2">
                     <div class="project-item-icon-box">
                       <ion-icon name="eye-outline"></ion-icon>
                     </div>
@@ -656,7 +666,7 @@
                 data-category="web design"
               >
                 <a href="#">
-                  <figure class="project-img">
+                  <figure class="project-img" id="img3">
                     <div class="project-item-icon-box">
                       <ion-icon name="eye-outline"></ion-icon>
                     </div>
@@ -680,7 +690,7 @@
                 data-category="applications"
               >
                 <a href="#">
-                  <figure class="project-img">
+                  <figure class="project-img" id="img4">
                     <div class="project-item-icon-box">
                       <ion-icon name="eye-outline"></ion-icon>
                     </div>
@@ -704,7 +714,7 @@
                 data-category="web design"
               >
                 <a href="#">
-                  <figure class="project-img">
+                  <figure class="project-img" id="img5">
                     <div class="project-item-icon-box">
                       <ion-icon name="eye-outline"></ion-icon>
                     </div>
@@ -727,7 +737,7 @@
                 data-category="web design"
               >
                 <a href="#">
-                  <figure class="project-img">
+                  <figure class="project-img" id="img6">
                     <div class="project-item-icon-box">
                       <ion-icon name="eye-outline"></ion-icon>
                     </div>
