better pic, and quote

--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
                 <div class="content-card" data-testimonials-item>
                   <figure class="testimonials-avatar-box">
                     <img
-                      src="./assets/images/Ben5.png"
+                      src="./assets/images/ben.jfif"
                       alt="Ben Leach"
                       width="60"
                       data-testimonials-avatar
@@ -307,9 +307,9 @@
 
                   <div class="testimonials-text" data-testimonials-text>
                     <p>
-                      David has helped with many of my projects, and has
-                      continued to impress me. I think any company he starts at
-                      will not be sorry.
+                      David has done contract work for me, and has continue to
+                      be an asset. He has been able to understanding things
+                      quickly, and has kept up with the companies needs.
                     </p>
                   </div>
                 </div>
