--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
 
                   <div class="testimonials-text" data-testimonials-text>
                     <p>
-                      David has done contract work for me and has continued to
+                      David does contract work for me and has continued to
                       be an asset. He has been able to understand things
                       quickly, and has kept up with the companies needs.
                     </p>
