--- a/index.html
+++ b/index.html
@@ -169,24 +169,20 @@
 
           <section class="about-text">
             <p>
-              I've had about 2 years of professional experience as a full stack
-              developer. I currently do contract work with Bleached Solutions.
-              While there, I have worked with Angular, Vue.js, Javascript,
-              Chrome Extension, C#, and Golang. Before that I was an intern at
-              Revenue IQ doing microservice refactoring, and writing unit tests.
-              They used an Angular frontend and a C# backend. I am currently
-              seeking a junior level positon, preferably as full-stack, in
-              C#/Angular/JS/Vue.js. Although, I am not afraid of other
-              technologies I have less experience with.
+              I've had 2 years of professional experience in full stack
+              development. I currently receive contract work from Bleached
+              Solutions. While there, I have worked with Angular, Vue.js,
+              Javascript, Chrome Extension, C#, and Golang. Prior to that, I was
+              an intern at Revenue IQ. My responsibilities included microservice
+              refactoring, and writing unit tests. Revenue IQ was mostly C# and
+              Angular based.
             </p>
 
             <p>
-              My goal is to learn as much as possible about software creation,
-              and gain a great understanding of full-stack engineering. I have
-              enjoyed the past 3 years learning various technologies. It is
-              important learning technologies I dont understand, and improving
-              my skills with ones I do. I also enjoy working on 2D games with
-              Unity in my spare time.
+              My goal is to learn as much as possible about software, and
+              improve my understanding of full-stack engineering. I have enjoyed
+              the past 3 years learning software development. I also work on 2D
+              games with Unity in my spare time.
             </p>
           </section>
 
@@ -307,9 +303,9 @@
 
                   <div class="testimonials-text" data-testimonials-text>
                     <p>
-                      David does contract work for me and has continued to
-                      be an asset. He has been able to understand things
-                      quickly, and has kept up with the companies needs.
+                      David does contract work for me and has continued to be an
+                      asset. He has been able to understand things quickly, and
+                      has kept up with the companies needs.
                     </p>
                   </div>
                 </div>
