--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>vCard - Personal Portfolio</title>
+    <title>portfolio - David McNeill</title>
 
     <!--
      Icon by IYIKON on freeicons.io
@@ -576,6 +576,7 @@
             >
               <ion-icon name="close-outline"></ion-icon>
             </button>
+
             <img src="" id="portfolio-modal-image" />
           </div>
         </div>
