--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@
               <li class="timeline-item">
                 <h4 class="h4 timeline-item-title">Full Resume Link</h4>
 
-                <a class="resume" href="assets/images/David Resume.pdf"
+                <a class="resume" href="assets/images/DavidResume4-6.pdf"
                   >Click Here To See Full Resume</a
                 >
               </li>
