--- a/index.html
+++ b/index.html
@@ -632,7 +632,7 @@
                   <h3 class="project-title">Bleached Solultions</h3>
                 </a>
 
-                <p class="project-category">Main site - Under construction</p>
+                <p class="project-category">Main site - Click to visit</p>
               </a>
             </li>
           </ul>
