--- a/index.html
+++ b/index.html
@@ -629,10 +629,11 @@
                 </figure>
 
                 <a href="https://bleachedsolutions.com">
-                  <h3 class="project-title">Bleached Solultions</h3>
-                </a>
+                  <h3 class="project-title" style="color: rgb(184, 184, 69)">Bleached Solultions</h3>
 
-                <p class="project-category">Main site - Click to visit</p>
+
+                  <p class="project-category">Main site - Click to visit</p>
+                </a>
               </a>
             </li>
           </ul>
