update with career foundry.

--- a/index.html
+++ b/index.html
@@ -403,7 +403,145 @@
           </ol>
         </section>
 
-        <section class="skill">
+        <section class="career-foundry" style="padding-top: 40px;">
+          <header>
+            <h2 class="h2 article-title">Carreer Foundry - Advanced Python Bootcamp</h2>
+          </header>
+
+          <section class="timeline">
+            <div class="title-wrapper">
+              <div class="icon-box">
+                <ion-icon name="book-outline"></ion-icon>
+              </div>
+
+              <h3 class="h3">Course Apps</h3>
+            </div>
+
+            <ol class="timeline-list">
+              <li class="timeline-item">
+                <h4 class="h4 timeline-item-title">Recipe App Live</h4>
+
+                <span>7/2023</span>
+
+
+
+                <p class="timeline-text">
+                  - Live Django Application where you can create a user to build your own recipes and add ingredients.
+                  You can search for recipes by recipe name or ingredient. The your recipes tab on the left navigation
+                  will take you to all your recipes to change or delete. Recipe detail page will show data analytics of
+                  the recipes, as well as directions and other information.
+                </p>
+
+                <p class="timeline-text" style="padding-top: 20px;">
+                  - Technologies used: Python, Django, JS, CSS, HTML, Heroku, Postgres, SQLite,
+                  Pandas, Matplotlib, dj-database-url, psycopg2-binary, gunicorn, whitenoise, pillow
+                </p>
+
+
+                <img src="./assets/images/Recipe_Heroku_App.jpg" class="careerfoundry-image" walt="music"
+                  loading="lazy" />
+
+                <a href="https://serene-eyrie-98382-920f167cb9ee.herokuapp.com/" target="_blank">
+                  <h3 class="project-title" style="color: rgb(184, 184, 69)">Recipe App</h3>
+                  <p class="project-category">Recipe App Heroku Site - Click to visit</p>
+                </a>
+                <a href="https://github.com/dlm1337/recipe-app" style="padding-top: 20px;" target="_blank">
+                  <h3 class="project-title" style="color: rgb(184, 184, 69)">Github</h3>
+                  <p class="project-category">Github Repo - Click to visit</p>
+                </a>
+
+                <h4 class="h4 timeline-item-title" style="padding-top: 20px;">Recipe App Flow Charts/Model Schema</h4>
+
+                <p class="timeline-text" style="padding-top: 20px;">
+                  - During the course we drew up flow charts and mapped out schemas to organize thoughts
+                  on the project progress. We used the admin to test out the implemented schemas that
+                  were planned. View flowcharts helped to test the user journey through the app, and
+                  map out expected behavior. Flowcharts were helpful with checking for unexpected behavior as well.
+                </p>
+
+                <div class="row" style="display: flex;">
+                  <img src="./assets/images/Charts-Flows/recipe-app-schema.jpg" class="careerfoundry-image" walt="music"
+                    loading="lazy" style="padding-top: 20px; width: 50%" />
+
+                  <img src="./assets/images/Charts-Flows/flowchart_journey.png" class="careerfoundry-image" walt="music"
+                    loading="lazy" style="padding-top: 20px; width: 50%;" />
+                </div>
+
+
+                <p style="padding-top: 20px;">Screenshots - Models/Flowcharts/Admin:</p>
+                <a href="./assets/images/Charts-Flows.zip" download>Download Assets</a>
+              </li>
+
+              <li class="timeline-item">
+                <h4 class="h4 timeline-item-title">
+                  Recipe Console App
+                </h4>
+
+                <span>6/2023</span>
+
+
+                <p class="timeline-text">
+                  - Recipe console app where you can add, remove, edit, and search for recipes. Navigation is controlled
+                  from a while loop until you type the command to exit. Navigation menus has all the commands listed for
+                  navigation.
+                </p>
+
+                <p class="timeline-text" style="padding-top: 20px;">
+                  - Technologies used: Python, Django, SQLAlchemy, Mysqlclient, Ipython, SQLite
+                </p>
+
+                <img src="./assets/images/Recipe-Console-App/step3.png" alt="music" loading="lazy"
+                  class="careerfoundry-image" />
+
+                <p class="timeline-text" style="padding-top: 20px;">
+                  You can download the screenshots below to walk through how the Recipe Console App is used. The
+                  ABOUTME.md page in the root directory of the github repo, will walk you through how to download run
+                  the app.
+                  </menu>
+
+                </p>
+
+                <p style="padding-top: 20px;">Screenshots - Showing Recipe Console App Flow:</p>
+                <a href="./assets/images/Recipe-Console-App.zip" download>Download Assets</a>
+
+                <a href="https://github.com/dlm1337/careerfoundry-python-course/tree/main/Achievement%201/exercise1.7/Exercise%201.7-Task"
+                  style="padding-top: 20px;" target="_blank">
+                  <h3 class="project-title" style="color: rgb(184, 184, 69)">Github</h3>
+                  <p class="project-category">Github Repo - Click to visit</p>
+                </a>
+              </li>
+              <li class="timeline-item">
+                <h4 class="h4 timeline-item-title">Practice Bookstore Live</h4>
+                <span>7/2023</span>
+
+
+                <p class="timeline-text">
+                  - Practice project for learning Django MVT architecture, user auth, and data analytics. Learned about
+                  Django admin, migrations, and security for views and templates.
+                </p>
+
+                <p class="timeline-text" style="padding-top: 20px;">
+                  - Technologies used: Python, Django, JS, CSS, HTML, Heroku, Postgres, SQLite, Pandas, Matplotlib,
+                  dj-database-url, psycopg2-binary, gunicorn, whitenoise,
+                  pillow
+                </p>
+
+                <img src="./assets/images/Bookstore_Heroku_App.jpg" alt="music" loading="lazy"
+                  class="careerfoundry-image" />
+
+
+                <a href="https://serene-dusk-43398-c27ed0e1b841.herokuapp.com/" target="_blank">
+                  <h3 class="project-title" style="color: rgb(184, 184, 69)">Practice Bookstore</h3>
+                  <p class="project-category">Practice Bookstore Heroku Site - Click to visit</p>
+                </a>
+                <a href="https://github.com/dlm1337/bookstore" style="padding-top: 20px;" target="_blank">
+                  <h3 class="project-title" style="color: rgb(184, 184, 69)">Github</h3>
+                  <p class="project-category">Githup Repo - Click to visit</p>
+                </a>
+              </li>
+            </ol>
+          </section>
+          <!-- <section class="skill">
           <h3 class="h3 skills-title">Language Aptitude</h3>
 
           <ul class="skills-list content-card">
@@ -517,7 +655,7 @@
               </div>
             </li>
           </ul>
-        </section>
+        </section> -->
       </article>
 
       <!--
