--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@
 
         <section class="career-foundry" style="padding-top: 40px;">
           <header>
-            <h2 class="h2 article-title">Carreer Foundry - Advanced Python Bootcamp</h2>
+            <h2 class="h2 article-title">CareerFoundry - Advanced Python Bootcamp</h2>
           </header>
 
           <section class="timeline">
