--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@
                 <ion-icon name="book-outline"></ion-icon>
               </div>
 
-              <h3 class="h3">Course Apps</h3>
+              <h3 class="h3">Course Applications</h3>
             </div>
 
             <ol class="timeline-list">
