--- a/index.html
+++ b/index.html
@@ -407,7 +407,10 @@
           <header>
             <h2 class="h2 article-title">CareerFoundry - Advanced Python Bootcamp</h2>
           </header>
-
+          <a class="resume" href="./assets/images/CareerFoundry_Certificate_David McNeill.pdf" download
+            style="text-align: center; align-items: center; justify-content: center;">Click for Certificate of Course
+            Completion</a>
+          <br>
           <section class="timeline">
             <div class="title-wrapper">
               <div class="icon-box">
