--- a/index.html
+++ b/index.html
@@ -133,20 +133,23 @@
 
         <section class="about-text">
           <p>
-            I've had 2 years of professional experience in full stack
-            development. I currently receive contract work from Bleached
-            Solutions. While there, I have worked with Angular, Vue.js,
-            Javascript, Chrome Extension, C#, and Golang. Prior to that, I was
-            an intern at Revenue IQ. My responsibilities included microservice
-            refactoring, and writing unit tests. Revenue IQ was mostly C# and
-            Angular based.
+            I have 2.5 years of invaluable professional experience in the realm of full stack development. My ongoing
+            engagement involves contracting with Bleached Solutions, where I've been actively immersed in projects that
+            encompass a rich array of technologies such as Angular, Vue.js, Javascript, Chrome Extension, C#, and
+            Golang. Prior to this, I had the privilege of interning at Revenue IQ, a role in which I undertook pivotal
+            tasks such as microservice refactoring and the composition of meticulous unit tests. Notably, the
+            technological landscape at Revenue IQ revolved predominantly around C# and Angular.
           </p>
-
           <p>
-            My goal is to learn as much as possible about software, and
-            improve my understanding of full-stack engineering. I have enjoyed
-            the past 3 years learning software development. I also work on 2D
-            games with Unity in my spare time.
+            My unyielding aspiration is to continually expand my horizons within the realm of software and amplify my
+            grasp of full-stack engineering. This fervor for growth has fueled my dedication over the past 3 years as
+            I've delved deeper into the realm of software development. In addition to my professional pursuits, I
+            channel my creative energy into crafting 2D games utilizing Unity during my leisure time.
+          </p>
+          <p>
+            It's also worth highlighting that I've recently completed the Python for Web Developers course at
+            CareerFoundry, a testament to my commitment to staying abreast of the latest industry trends and refining my
+            skill set.
           </p>
         </section>
 
@@ -398,7 +401,7 @@
             <li class="timeline-item">
               <h4 class="h4 timeline-item-title">Full Resume Link</h4>
 
-              <a class="resume" href="assets/images/David Resume 5-9.pdf">Click Here To See Full Resume</a>
+              <a class="resume" href="assets/images/David Resume8_14.pdf">Click Here To See Full Resume</a>
             </li>
           </ol>
         </section>
